--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = "0.10.1"
 color-eyre = "0.6.5"
+dashmap = "6.1.0"
+serde_json = "1.0.143"
 tokio = { version = "1.47.1", features = ["full"] }
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-error = "0.2.1"
