--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = "0.10.1"
+bytes = "1.10.1"
 color-eyre = "0.6.5"
 dashmap = "6.1.0"
 serde_json = "1.0.143"
