--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ axum = { version = "0.8.4", features = ["macros"] }
 bytes = "1.10.1"
 color-eyre = "0.6.5"
 dashmap = "6.1.0"
+rmpv = { version = "1.3.0", features = ["with-serde"] }
+serde = "1.0.219"
 serde_json = "1.0.143"
+socketioxide = { version = "0.17.2", features = ["extensions", "state", "tracing"] }
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tracing = { version = "0.1.41", features = ["log"] }
