--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.4", features = ["macros"] }
+axum = { version = "0.8.4", features = ["http2", "macros"] }
 bytes = "1.10.1"
 color-eyre = "0.6.5"
 dashmap = "6.1.0"
