--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.4", features = ["http2", "macros"] }
+axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
 bytes = "1.10.1"
 color-eyre = "0.6.5"
 dashmap = "6.1.0"
+futures-util = "0.3.31"
 rmpv = { version = "1.3.0", features = ["with-serde"] }
 serde = "1.0.219"
 serde_json = "1.0.143"
