--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,19 @@ futures-util = "0.3.31"
 rmpv = { version = "1.3.0", features = ["with-serde"] }
 serde = "1.0.219"
 serde_json = "1.0.143"
-socketioxide = { version = "0.17.2", features = ["extensions", "state", "tracing"] }
-tokio = { version = "1.47.1", features = ["full"] }
+socketioxide = { version = "0.17.2", features = [
+    "extensions",
+    "state",
+    "tracing",
+] }
+tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "sync"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3.19", features = [
-    "chrono",
-    "json",
     "env-filter",
+    "json",
     "local-time",
-    "serde",
-    "serde_json",
-    "time",
 ] }
 
 [features]
