--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,12 @@ bytes = "1.10.1"
 dashmap = "6.1.0"
 futures-util = "0.3.31"
 rmpv = { version = "1.3.0", features = ["with-serde"] }
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 socketioxide = { version = "0.17.2", features = [
     "extensions",
     "state",
-    "tracing",
-] }
+], optional = true }
 tokio = { version = "1.47.1", features = ["net", "rt-multi-thread", "sync"] }
 tokio-stream = { version = "0.1.17", features = ["sync"] }
 tracing = { version = "0.1.41", features = ["log"] }
@@ -27,5 +26,12 @@ tracing-subscriber = { version = "0.3.19", features = [
 ], optional = true }
 
 [features]
-default = ["tracing-subscriber"]
+default = ["logging", "socketio_full"]
+logging = ["dep:tracing-subscriber", "socketioxide?/tracing"]
+
+socketio = ["dep:socketioxide"]
+socketio_pub = ["socketio"]
+socketio_sub = ["socketio"]
+socketio_full = ["socketio", "socketio_pub", "socketio_sub"]
+
 sse_dos_newlines = []
