--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ axum-extra = { version = "0.10.1", features = ["typed-header"] }
 bytes = "1.10.1"
 dashmap = "6.1.0"
 futures-util = "0.3.31"
-rmpv = { version = "1.3.0", features = ["with-serde"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.143"
+rmpv = { version = "1.3.0", features = ["with-serde"], optional = true }
+serde = { version = "1.0.219", features = ["derive"], optional = true }
+serde_json = { version = "1.0.143", optional = true }
 socketioxide = { version = "0.17.2", features = [
     "extensions",
     "state",
@@ -29,9 +29,10 @@ tracing-subscriber = { version = "0.3.19", features = [
 default = ["logging", "socketio_full"]
 logging = ["dep:tracing-subscriber", "socketioxide?/tracing"]
 
-socketio = ["dep:socketioxide"]
+socketio = ["dep:socketioxide", "dep:rmpv", "dep:serde", "dep:serde_json"]
 socketio_pub = ["socketio"]
 socketio_sub = ["socketio"]
 socketio_full = ["socketio", "socketio_pub", "socketio_sub"]
 
 sse_dos_newlines = []
+serde_json = ["dep:serde_json"]
