--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 bytes = "1.10.1"
+cfg-if = "1.0.3"
 dashmap = "6.1.0"
 futures-util = "0.3.31"
 rmpv = { version = "1.3.0", features = ["with-serde"], optional = true }
@@ -29,10 +30,11 @@ tracing-subscriber = { version = "0.3.19", features = [
 default = ["logging", "socketio_full"]
 logging = ["dep:tracing-subscriber", "socketioxide?/tracing"]
 
-socketio = ["dep:socketioxide", "dep:rmpv", "dep:serde", "dep:serde_json"]
+socketio = ["dep:socketioxide", "dep:rmpv", "dep:serde"]
 socketio_pub = ["socketio"]
 socketio_sub = ["socketio"]
-socketio_full = ["socketio", "socketio_pub", "socketio_sub"]
+socketio_json = ["socketio", "dep:serde_json"]
+socketio_full = ["socketio", "socketio_pub", "socketio_sub", "socketio_json"]
 
 sse_dos_newlines = []
 serde_json = ["dep:serde_json"]
